automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
    ],
    "source": [
     "names_and_ranks = [None]\n",
-    "for i in city_names:\n",
+    "for i in city_indi:\n",
     "    names_and_ranks.insert(city_indices.values(),i)\n",
     "names_and_ranks \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
