--- a/index.ipynb
+++ b/index.ipynb
@@ -183,8 +183,8 @@
    ],
    "source": [
     "names_and_ranks = [None]\n",
-    "for i in city_indi:\n",
-    "    names_and_ranks.insert(city_indices.values(),i)\n",
+    "for i in city_indices:\n",
+    "    names_and_ranks.(city_indices.values(),i)\n",
     "names_and_ranks \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
