--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "names_and_ranks = [None]\n",
     "for i in city_indices:\n",
-    "    names_and_ranks.(city_indices[i],i)\n",
+    "    names_and_ranks.(city_indices[i],city_names[i])\n",
     "names_and_ranks \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
