automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for i in cities\n"
    ]
   },
   {
