automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for i in cities\n"
+    "for i in cities:\n",
+    "    "
    ]
   },
   {
