--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for i in cities:\n",
+    "for i in cities['':\n",
     "    city_populations.append(cities)"
    ]
   },
