--- a/index.ipynb
+++ b/index.ipynb
@@ -234,8 +234,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for i in cities['':\n",
-    "    city_populations.append(cities)"
+    "for i in cities:\n",
+    "    city_populations.append(cities[i][])"
    ]
   },
   {
