--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
    "source": [
     "city_populations = []\n",
     "for i in cities:\n",
-    "    city_populations.append(cities[i]['Population'].values())\n",
+    "    city_populations.append(cities['Population'))\n",
     "city_populations"
    ]
   },
