--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for i in ci"
    ]
   },
   {
