--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for i in ci"
+    "for i in cities:\n",
+    "    city_areas"
    ]
   },
   {
