automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
    "source": [
     "city_areas = []\n",
     "for i in cities:\n",
-    "    city_areas"
+    "    city_areas.append(i)"
    ]
   },
   {
