--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
    "source": [
     "city_areas = []\n",
     "for i in cities:\n",
-    "    city_areas.append(i)"
+    "    city_areas.append(i[\"a\"])"
    ]
   },
   {
