--- a/index.ipynb
+++ b/index.ipynb
@@ -390,13 +390,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
     "for i in cities:\n",
-    "    city_areas.append(i[\"a\"])"
+    "    city_areas.append(i[\"Area\"])\n"
    ]
   },
   {
